--- a/style.css
+++ b/style.css
@@ -135,3 +135,22 @@ header {
     flex-direction: column;
 }
 }
+
+@media ( max-width: 530px ) {
+    nav ul {
+        width: 100%;
+        padding-left: 0;
+        margin-bottom: 2rem;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+}
+}
+
+@media ( max-width: 530px ) {
+.botões{
+    display: flex;
+    flex-direction: column;
+}
+}
